# EmbeddingFinalWork

./: .gitignore
client/: CMakeLists.txt  CMakePresets.json  README.md  client.md  export.txt  log.h  main.cpp  mainwindow.cpp  mainwindow.h  p2p_browse_client.cpp  p2p_browse_client.h  p2p_server.cpp  p2p_server.h  p2p_transfer.cpp  p2p_transfer.h  protocol.cpp  protocol.h  registry_client.cpp  registry_client.h  resources.qrc
server/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  log.h  main.cpp  protocol.cpp  protocol.h  registry.cpp  registry.h  server.cpp  server.h  test_client.py
